--- a/lol.html
+++ b/lol.html
@@ -1,1 +1,1 @@
-<a href="https://cdn.discordapp.com/attachments/522584285509582859/543160168138145812/when_you_cant_sleep.mp4" title="lmao watch">lmao watch</a>
+<embed src="hhttps://cdn.discordapp.com/attachments/522584285509582859/543160168138145812/when_you_cant_sleep.mp4" allowfullscreen="true" width="425" height="344">
